--- a/index.html
+++ b/index.html
@@ -1,11 +1,3 @@
-<!--
-  Archivo: index.html + plantillas
-  Instrucciones:
-  - Reemplaza la variable --header-img-url con la URL de tu imagen (o usa una ruta relativa en el repo).
-  - Sube este archivo a la raíz del repo (o docs/) y activa GitHub Pages.
-  - Las plantillas de las 7 páginas están incluidas abajo en secciones comentadas; córtalas en archivos separados (formato.html, tipografia.html, etc.) si las quieres como páginas independientes.
--->
-
 <!doctype html>
 <html lang="es">
 <head>
@@ -22,33 +14,34 @@
       --panel:#0f0d14;
       --card:#14111a;
       --muted:#cfc9de;
-      --accent:#9161ff; /* morado principal */
-      --accent-2:#5a2bd1; /* morado secundario */
+      --accent:#9161ff;
+      --accent-2:#5a2bd1;
       --white:#ffffff;
       --border: rgba(255,255,255,0.04);
-      --header-img-url: url('PLACEHOLDER-HEADER.jpg'); /* <<--- REEMPLAZA con la URL que quieras */
+      --header-img-url: url('PLACEHOLDER-HEADER.jpg');
     }
 
     *{box-sizing:border-box}
-    html,body{height:100%; margin:0; font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; background:var(--bg); color:var(--white);}
+    html,body{height:100%; margin:0; font-family:Inter, system-ui; background:var(--bg); color:var(--white);}
 
-    /* Layout */
     .wrap{display:flex; min-height:100vh}
 
-    /* Sidebar */
     .sidebar{
-      width:260px; background:linear-gradient(180deg,var(--panel), #0b0810); border-right:1px solid var(--border); padding:28px; position:fixed; top:0; left:0; bottom:0; overflow:auto;
+      width:260px; background:linear-gradient(180deg,var(--panel), #0b0810); border-right:1px solid var(--border);
+      padding:28px; position:fixed; top:0; left:0; bottom:0; overflow:auto;
     }
 
     .brand{display:flex; gap:12px; align-items:center; margin-bottom:18px}
-    .logo{width:52px;height:52px;border-radius:10px;background:linear-gradient(135deg,var(--accent),var(--accent-2));display:grid;place-items:center;font-weight:800;box-shadow:0 8px 30px rgba(89,42,209,0.15)}
+    .logo{width:52px;height:52px;border-radius:10px;background:linear-gradient(135deg,var(--accent),var(--accent-2));display:grid;place-items:center;font-weight:800;}
     .brand h1{font-size:16px;margin:0}
     .brand p{margin:0;font-size:12px;color:var(--muted)}
 
     nav.primary{margin-top:6px}
-    nav.primary a{display:flex;gap:10px;align-items:center;padding:10px 8px;border-radius:8px;color:var(--muted);text-decoration:none;font-weight:600;margin-bottom:6px}
+    nav.primary a{
+      display:flex;gap:10px;align-items:center;padding:10px 8px;border-radius:8px;
+      color:var(--muted);text-decoration:none;font-weight:600;margin-bottom:6px
+    }
     nav.primary a svg{flex-shrink:0}
-    nav.primary a.active{background:linear-gradient(90deg,rgba(145,97,255,0.12), rgba(90,43,209,0.08));color:var(--white);box-shadow:0 6px 25px rgba(86,39,200,0.08)}
     nav.primary a:hover{color:var(--white)}
 
     .sidebar .actions{margin-top:auto;display:flex;flex-direction:column;gap:10px}
@@ -56,10 +49,8 @@
     .btn.mail{background:linear-gradient(90deg,var(--accent),var(--accent-2));color:var(--white)}
     .btn.ghost{background:transparent;border:1px solid var(--border);color:var(--muted)}
 
-    /* Mobile toggle */
     .mobile-toggle{display:none;margin-left:auto}
 
-    /* Main content */
     main{margin-left:260px;flex:1}
     .header{
       height:320px; display:flex; align-items:flex-end; color:var(--white);
@@ -69,288 +60,149 @@
     .header::after{content:'';position:absolute;inset:0;background:linear-gradient(180deg, rgba(9,6,12,0.25), rgba(10,6,15,0.75));}
     .header .hero{position:relative; z-index:2;padding:36px 60px;display:flex;align-items:center;gap:24px}
 
-    .hero .title{font-size:28px;line-height:1.05;margin:0;color:var(--accent)}
+    .hero .title{font-size:28px;margin:0;color:var(--accent)}
     .hero .subtitle{color:var(--muted);margin-top:6px}
 
     .container{padding:36px 60px}
 
-    /* Grid */
     .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
     .card{background:linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.005));padding:18px;border-radius:12px;border:1px solid var(--border)}
-    .card h3{margin:0 0 6px 0}
-    .card p{margin:0;color:var(--muted)}
+    .card p{color:var(--muted)}
 
-    /* Footer */
     footer{padding:24px 60px;border-top:1px solid var(--border);color:var(--muted)}
 
-    /* Back to top */
-    .backtop{position:fixed;right:22px;bottom:22px;background:linear-gradient(90deg,var(--accent),var(--accent-2));padding:12px;border-radius:999px;color:white;text-decoration:none;box-shadow:0 12px 30px rgba(86,39,200,0.18)}
+    .backtop{position:fixed;right:22px;bottom:22px;background:linear-gradient(90deg,var(--accent),var(--accent-2));padding:12px;border-radius:999px;color:white;text-decoration:none;}
 
-    /* Responsive */
     @media (max-width:980px){
-      .sidebar{position:fixed;transform:translateX(-100%);transition:transform .28s ease-in-out;z-index:40}
+      .sidebar{position:fixed;transform:translateX(-100%);transition:transform .28s;z-index:40}
       .sidebar.open{transform:translateX(0)}
       .mobile-toggle{display:inline-flex}
       main{margin-left:0}
-      .header .hero{padding:20px}
-      .container{padding:20px}
-      .grid{grid-template-columns:repeat(2,1fr)}
     }
-    @media (max-width:560px){
-      .grid{grid-template-columns:1fr}
-      .hero .title{font-size:20px}
-    }
-
-    /* tiny helpers */
-    .muted{color:var(--muted)}
-    .small{font-size:13px}
-
   </style>
 </head>
+
 <body>
 
-  <div class="wrap">
+<div class="wrap">
 
-    <!-- SIDEBAR -->
-    <aside class="sidebar" id="sidebar" aria-label="Navegación lateral">
-      <div class="brand">
-        <div class="logo">DE</div>
+  <!-- SIDEBAR -->
+  <aside class="sidebar" id="sidebar">
+
+    <div class="brand">
+      <div class="logo">DE</div>
+      <div>
+        <h1>Diseño Editorial</h1>
+        <p class="muted">Formato · Tipografía · Retícula</p>
+      </div>
+
+      <button class="mobile-toggle" id="openSidebar">☰</button>
+    </div>
+
+    <nav class="primary">
+      <a href="formato.html">
+        <svg width="18" height="18" ...></svg>
+        Formato
+      </a>
+
+      <a href="tipografia.html">
+        <svg width="18" height="18" ...></svg>
+        Tipografía
+      </a>
+
+      <a href="reticula.html">
+        <svg width="18" height="18" ...></svg>
+        Retícula
+      </a>
+
+      <a href="color.html">
+        <svg width="18" height="18" ...></svg>
+        Color
+      </a>
+
+      <a href="cubierta.html">
+        <svg width="18" height="18" ...></svg>
+        Cubierta / Portada
+      </a>
+
+      <a href="imagenes.html">
+        <svg width="18" height="18" ...></svg>
+        Uso de imágenes
+      </a>
+
+      <a href="proceso.html">
+        <svg width="18" height="18" ...></svg>
+        Proceso de maquetación
+      </a>
+    </nav>
+
+    <div class="actions">
+      <a class="btn mail" href="mailto:jose.davila@institutoalejandria.edu.mx">✉️ Enviar correo</a>
+      <a class="btn ghost" href="#">⤴ Volver al inicio</a>
+    </div>
+
+  </aside>
+
+  <!-- MAIN -->
+  <main>
+
+    <header class="header">
+      <div class="hero">
         <div>
-          <h1>Diseño Editorial</h1>
-          <p class="muted">Formato · Tipografía · Retícula</p>
-        </div>
-        <button class="mobile-toggle" id="openSidebar" aria-label="Abrir menú" title="Abrir menú" style="margin-left:auto;background:transparent;border:none;color:var(--muted);font-weight:700">☰</button>
-      </div>
-
-      <nav class="primary" id="primaryNav">
-        <a href="#formato" data-target="formato" class="navlink" aria-current="page">
-          <!-- icon -->
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><rect x="3" y="4" width="18" height="16" rx="2" stroke="currentColor" stroke-width="1.4"/></svg>
-          Formato
-        </a>
-
-        <a href="#tipografia" data-target="tipografia" class="navlink">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M4 20h16" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/><path d="M12 4l-4 12" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/><path d="M12 4l4 12" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/></svg>
-          Tipografía
-        </a>
-
-        <a href="#reticula" data-target="reticula" class="navlink">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M3 9h18M3 15h18" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/></svg>
-          Retícula
-        </a>
-
-        <a href="#color" data-target="color" class="navlink">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><circle cx="12" cy="12" r="7" stroke="currentColor" stroke-width="1.4"/></svg>
-          Color
-        </a>
-
-        <a href="#cubierta" data-target="cubierta" class="navlink">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><rect x="3" y="4" width="14" height="16" rx="1.2" stroke="currentColor" stroke-width="1.4"/><path d="M17 6h3v12h-3" stroke="currentColor" stroke-width="1.4"/></svg>
-          Cubierta / Portada
-        </a>
-
-        <a href="#imagenes" data-target="imagenes" class="navlink">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><rect x="3" y="4" width="18" height="14" rx="1.2" stroke="currentColor" stroke-width="1.4"/><path d="M8 11l2 2 3-3 4 4" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/></svg>
-          Uso de imágenes
-        </a>
-
-        <a href="#proceso" data-target="proceso" class="navlink">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M12 2v6" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/><path d="M12 16v6" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/><path d="M4.9 7.5l4.24 4.24" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/><path d="M19.1 16.5l-4.24-4.24" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/></svg>
-          Proceso de maquetación
-        </a>
-      </nav>
-
-      <div class="actions">
-        <a class="btn mail" href="mailto:jose.davila@institutoalejandria.edu.mx">✉️ Enviar correo</a>
-        <a class="btn ghost" href="#" id="toTop">⤴ Volver al inicio</a>
-      </div>
-    </aside>
-
-    <!-- MAIN -->
-    <main>
-
-      <header class="header" role="banner">
-        <div class="hero">
-          <div>
-            <h2 class="title">Diseño editorial que comunica</h2>
-            <p class="subtitle muted">Guía práctica: formato, tipografía, retícula, color, cubierta, imágenes y proceso de maquetación.</p>
-            <div style="margin-top:12px">
-              <a class="btn mail" href="mailto:jose.davila@institutoalejandria.edu.mx">Contactar — jose.davila@institutoalejandria.edu.mx</a>
-            </div>
+          <h2 class="title">Diseño editorial que comunica</h2>
+          <p class="subtitle muted">Guía práctica: formato, tipografía, retícula, color, cubierta, imágenes y proceso de maquetación.</p>
+          <div style="margin-top:12px">
+            <a class="btn mail" href="mailto:jose.davila@institutoalejandria.edu.mx">
+              Contactar — jose.davila@institutoalejandria.edu.mx
+            </a>
           </div>
         </div>
-      </header>
+      </div>
+    </header>
 
-      <section class="container">
-        <h3 style="color:var(--accent);margin-top:0">Introducción</h3>
-        <p class="muted">Este repositorio recoge buenas prácticas y plantillas para proyectos editoriales. Usa la barra lateral para navegar entre las secciones. Las páginas específicas están preparadas como plantillas debajo de este archivo (comentadas) para que puedas separarlas si lo deseas.</p>
+    <section class="container">
+      <h3 style="color:var(--accent);margin-top:0">Introducción</h3>
+      <p class="muted">Este repositorio recoge buenas prácticas...</p>
 
-        <div style="height:20px"></div>
+      <div class="grid">
+        <article class="card">
+          <h3>Formato</h3>
+          <p>Relación de tamaño, márgenes y experiencia…</p>
+        </article>
 
-        <div class="grid">
-          <article class="card">
-            <h3>Formato</h3>
-            <p class="muted">Relación de tamaño, márgenes y experiencia de lectura según el tipo de obra.</p>
-          </article>
+        <article class="card">
+          <h3>Tipografía</h3>
+          <p>Elección tipográfica, contraste…</p>
+        </article>
 
-          <article class="card">
-            <h3>Tipografía</h3>
-            <p class="muted">Elección tipográfica, contraste, lecturabilidad y jerarquía.</p>
-          </article>
+        <article class="card">
+          <h3>Retícula</h3>
+          <p>Sistemas de columnas y módulos…</p>
+        </article>
+      </div>
 
-          <article class="card">
-            <h3>Retícula</h3>
-            <p class="muted">Sistemas de columnas, módulos y rejillas para coherencia visual.</p>
-          </article>
-        </div>
+    </section>
 
-      </section>
+    <footer>
+      <div style="display:flex;justify-content:space-between;">
+        <div class="small muted">© <span id="year"></span> Diseño Editorial · José Luis Dávila</div>
+      </div>
+    </footer>
 
-      <!-- SECCIONES DETALLADAS -->
-      <section id="formato" class="container" style="padding-top:36px;padding-bottom:36px;">
-        <h2 style="color:var(--accent)">Formato</h2>
-        <p class="muted">Define tamaño, formato, y requisitos técnicos según soporte (impresión o digital).</p>
-      </section>
+  </main>
 
-      <section id="tipografia" class="container" style="padding-top:36px;padding-bottom:36px;">
-        <h2 style="color:var(--accent)">Tipografía</h2>
-        <p class="muted">Jerarquías, cuerpos, interlineados y combinaciones tipográficas recomendadas.</p>
-      </section>
+  <a class="backtop" href="#">↑</a>
 
-      <section id="reticula" class="container" style="padding-top:36px;padding-bottom:36px;">
-        <h2 style="color:var(--accent)">Retícula</h2>
-        <p class="muted">Sistemas modulares, guías para maquetación y ejemplos prácticos.</p>
-      </section>
+</div>
 
-      <section id="color" class="container" style="padding-top:36px;padding-bottom:36px;">
-        <h2 style="color:var(--accent)">Color</h2>
-        <p class="muted">Paletas, contrastes y uso del color para fortalecer la identidad editorial.</p>
-      </section>
+<script>
+  document.getElementById("year").textContent = new Date().getFullYear();
 
-      <section id="cubierta" class="container" style="padding-top:36px;padding-bottom:36px;">
-        <h2 style="color:var(--accent)">Cubierta / Portada</h2>
-        <p class="muted">Composición, jerarquía y elementos para una portada efectiva.</p>
-      </section>
+  const sidebar = document.getElementById("sidebar");
+  const openBtn = document.getElementById("openSidebar");
 
-      <section id="imagenes" class="container" style="padding-top:36px;padding-bottom:36px;">
-        <h2 style="color:var(--accent)">Uso de imágenes</h2>
-        <p class="muted">Resoluciones, permisos, tratamiento y relaciones con la tipografía.</p>
-      </section>
-
-      <section id="proceso" class="container" style="padding-top:36px;padding-bottom:80px;">
-        <h2 style="color:var(--accent)">Proceso de maquetación</h2>
-        <p class="muted">Flujo: análisis, prototipado, pruebas, correcciones y entrega para impresión/digital.</p>
-      </section>
-
-      <footer>
-        <div style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
-          <div class="small muted">© <span id="year"></span> Diseño Editorial · Hecho por José Luis Dávila</div>
-          <div class="small muted">Plantillas listas para GitHub Pages</div>
-        </div>
-      </footer>
-
-    </main>
-
-    <a class="backtop" href="#">↑</a>
-
-  </div>
-
-  <script>
-    // Año dinámico
-    document.getElementById('year').textContent = new Date().getFullYear();
-
-    // Mobile toggle
-    const sidebar = document.getElementById('sidebar');
-    const openBtn = document.getElementById('openSidebar');
-    openBtn && openBtn.addEventListener('click', ()=> sidebar.classList.toggle('open'));
-
-    // Scrollspy: resaltar nav según sección visible
-    const navLinks = document.querySelectorAll('.navlink');
-    const sections = Array.from(navLinks).map(a => document.getElementById(a.getAttribute('data-target')));
-
-    const io = new IntersectionObserver(entries => {
-      entries.forEach(e => {
-        const id = e.target.id;
-        const link = document.querySelector('.navlink[data-target="'+id+'"]');
-        if(e.isIntersecting){
-          navLinks.forEach(n=>n.classList.remove('active'));
-          link && link.classList.add('active');
-        }
-      });
-    },{root:null,rootMargin:'-40% 0px -40% 0px',threshold:0});
-
-    sections.forEach(s=> s && io.observe(s));
-
-    // Smooth scrolling for nav links
-    document.querySelectorAll('a[href^="#"]').forEach(a=>{
-      a.addEventListener('click', (e)=>{
-        const href = a.getAttribute('href');
-        if(href.startsWith('#')){
-          e.preventDefault();
-          const t = document.querySelector(href);
-          if(t) t.scrollIntoView({behavior:'smooth',block:'start'});
-          // close sidebar on mobile
-          sidebar.classList.remove('open');
-        }
-      });
-    });
-
-    // Back to top
-    const toTop = document.getElementById('toTop');
-    toTop && toTop.addEventListener('click', (e)=>{ e.preventDefault(); window.scrollTo({top:0,behavior:'smooth'}) });
-
-  </script>
-
-
-  <!--
-    === PLANTILLAS (corta y pega cada bloque en un archivo separado si quieres páginas independientes) ===
-
-    Guarda cada bloque en archivos: formato.html, tipografia.html, reticula.html, color.html, cubierta.html, imagenes.html, proceso.html
-
-  -->
-
-  <!-- formato.html -->
-  <!--
-  <!doctype html>
-  <html lang="es"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Formato — Diseño Editorial</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-  <style>body{background:#08060a;color:#fff;font-family:Inter,system-ui;padding:28px} a{color:#9161ff}</style>
-  </head><body>
-  <a href="/">← Volver al inicio</a>
-  <h1>Formato</h1>
-  <p>Contenido sobre tamaños, proporciones y márgenes. Incluye plantillas A4, A5, bolsillo, etc.</p>
-  </body></html>
-  -->
-
-  <!-- tipografia.html -->
-  <!--
-  ... (misma estructura que arriba, cambia el título y contenido) 
-  -->
-
-  <!-- reticula.html -->
-  <!--
-  ...
-  -->
-
-  <!-- color.html -->
-  <!--
-  ...
-  -->
-
-  <!-- cubierta.html -->
-  <!--
-  ...
-  -->
-
-  <!-- imagenes.html -->
-  <!--
-  ...
-  -->
-
-  <!-- proceso.html -->
-  <!--
-  ...
-  -->
+  openBtn.addEventListener("click", () => sidebar.classList.toggle("open"));
+</script>
 
 </body>
 </html>
