--- a/index.html
+++ b/index.html
@@ -87,62 +87,61 @@
 <div class="wrap">
 
   <!-- SIDEBAR -->
- <aside class="sidebar">
-  <nav>
-    <ul>
+  <aside class="sidebar" id="sidebar">
 
-      <li>
-        <a href="formato.html">
-          <span class="icon">📐</span>
-          <span>Formato</span>
-        </a>
-      </li>
+    <div class="brand">
+      <div class="logo">DE</div>
+      <div>
+        <h1>Diseño Editorial</h1>
+        <p class="muted">Formato · Tipografía · Retícula</p>
+      </div>
 
-      <li>
-        <a href="tipografia.html">
-          <span class="icon">🔤</span>
-          <span>Tipografía</span>
-        </a>
-      </li>
+      <button class="mobile-toggle" id="openSidebar">☰</button>
+    </div>
 
-      <li>
-        <a href="reticula.html">
-          <span class="icon">📏</span>
-          <span>Retícula</span>
-        </a>
-      </li>
+    <nav class="primary">
+      <a href="formato.html">
+        <svg width="18" height="18" ...></svg>
+        Formato
+      </a>
 
-      <li>
-        <a href="color.html">
-          <span class="icon">🎨</span>
-          <span>Color</span>
-        </a>
-      </li>
+      <a href="tipografia.html">
+        <svg width="18" height="18" ...></svg>
+        Tipografía
+      </a>
 
-      <li>
-        <a href="cubierta.html">
-          <span class="icon">📕</span>
-          <span>Cubierta / Portada</span>
-        </a>
-      </li>
+      <a href="reticula.html">
+        <svg width="18" height="18" ...></svg>
+        Retícula
+      </a>
 
-      <li>
-        <a href="imagenes.html">
-          <span class="icon">🖼️</span>
-          <span>Uso de imágenes</span>
-        </a>
-      </li>
+      <a href="color.html">
+        <svg width="18" height="18" ...></svg>
+        Color
+      </a>
 
-      <li>
-        <a href="creditos.html">
-          <span class="icon">⭐</span>
-          <span>Créditos</span>
-        </a>
-      </li>
+      <a href="cubierta.html">
+        <svg width="18" height="18" ...></svg>
+        Cubierta / Portada
+      </a>
 
-    </ul>
-  </nav>
-</aside>
+      <a href="imagenes.html">
+        <svg width="18" height="18" ...></svg>
+        Uso de imágenes
+      </a>
+
+      <a href="proceso.html">
+        <svg width="18" height="18" ...></svg>
+        Proceso de maquetación
+      </a>
+    </nav>
+
+    <div class="actions">
+      <a class="btn mail" href="mailto:jose.davila@institutoalejandria.edu.mx">✉️ Enviar correo</a>
+      <a class="btn ghost" href="#">⤴ Volver al inicio</a>
+    </div>
+
+  </aside>
 
   <!-- MAIN -->
   <main>
