--- a/index.html
+++ b/index.html
@@ -87,61 +87,84 @@
 <div class="wrap">
 
   <!-- SIDEBAR -->
-  <aside class="sidebar" id="sidebar">
-
-    <div class="brand">
-      <div class="logo">DE</div>
-      <div>
-        <h1>Diseño Editorial</h1>
-        <p class="muted">Formato · Tipografía · Retícula</p>
-      </div>
-
-      <button class="mobile-toggle" id="openSidebar">☰</button>
+  <aside class="sidebar" id="sidebar" aria-label="Navegación lateral">
+  <div class="brand">
+    <div class="logo">DE</div>
+    <div>
+      <h1>Diseño Editorial</h1>
+      <p class="muted">Formato · Tipografía · Retícula</p>
     </div>
+    <button class="mobile-toggle" id="openSidebar" aria-label="Abrir menú" title="Abrir menú" style="margin-left:auto;background:transparent;border:none;color:var(--muted);font-weight:700">☰</button>
+  </div>
 
-    <nav class="primary">
-      <a href="formato.html">
-        <svg width="18" height="18" ...></svg>
-        Formato
-      </a>
+  <nav class="primary" id="primaryNav">
 
-      <a href="tipografia.html">
-        <svg width="18" height="18" ...></svg>
-        Tipografía
-      </a>
+    <a href="formato.html" class="navlink">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+        <rect x="3" y="4" width="18" height="16" rx="2" stroke="currentColor" stroke-width="1.4"/>
+      </svg>
+      Formato
+    </a>
 
-      <a href="reticula.html">
-        <svg width="18" height="18" ...></svg>
-        Retícula
-      </a>
+    <a href="tipografia.html" class="navlink">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+        <path d="M4 20h16" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
+        <path d="M12 4l-4 12" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
+        <path d="M12 4l4 12" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
+      </svg>
+      Tipografía
+    </a>
 
-      <a href="color.html">
-        <svg width="18" height="18" ...></svg>
-        Color
-      </a>
+    <a href="reticula.html" class="navlink">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+        <path d="M3 9h18M3 15h18" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
+      </svg>
+      Retícula
+    </a>
 
-      <a href="cubierta.html">
-        <svg width="18" height="18" ...></svg>
-        Cubierta / Portada
-      </a>
+    <a href="color.html" class="navlink">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+        <circle cx="12" cy="12" r="7" stroke="currentColor" stroke-width="1.4"/>
+      </svg>
+      Color
+    </a>
 
-      <a href="imagenes.html">
-        <svg width="18" height="18" ...></svg>
-        Uso de imágenes
-      </a>
+    <a href="cubierta.html" class="navlink">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+        <rect x="3" y="4" width="14" height="16" rx="1.2" stroke="currentColor" stroke-width="1.4"/>
+        <path d="M17 6h3v12h-3" stroke="currentColor" stroke-width="1.4"/>
+      </svg>
+      Cubierta / Portada
+    </a>
 
-      <a href="proceso.html">
-        <svg width="18" height="18" ...></svg>
-        Proceso de maquetación
-      </a>
-    </nav>
+    <a href="imagenes.html" class="navlink">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+        <rect x="3" y="4" width="18" height="14" rx="1.2" stroke="currentColor" stroke-width="1.4"/>
+        <path d="M8 11l2 2 3-3 4 4" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
+      </svg>
+      Uso de imágenes
+    </a>
 
-    <div class="actions">
-      <a class="btn mail" href="mailto:jose.davila@institutoalejandria.edu.mx">✉️ Enviar correo</a>
-      <a class="btn ghost" href="#">⤴ Volver al inicio</a>
-    </div>
+    <a href="proceso.html" class="navlink">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+        <path d="M12 2v6" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
+        <path d="M12 16v6" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
+        <path d="M4.9 7.5l4.24 4.24" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
+        <path d="M19.1 16.5l-4.24-4.24" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
+      </svg>
+      Proceso de maquetación
+    </a>
 
-  </aside>
+  </nav>
+
+  <div class="actions">
+    <a class="btn mail" href="mailto:jose.davila@institutoalejandria.edu.mx">✉️ Enviar correo</a>
+
+    <!-- Aquí ya corregido -->
+    <a class="btn ghost" href="index.html" id="toTop">⤴ Volver al inicio</a>
+  </div>
+</aside>
+
 
   <!-- MAIN -->
   <main>
