--- a/formato.html
+++ b/formato.html
@@ -1,20 +1,131 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formato · Diseño Editorial</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Diseño Editorial — Formato</title>
+  <meta name="description" content="Formato en diseño editorial." />
+
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+
+  <style>
+    :root{
+      --bg: #08060a;
+      --panel:#0f0d14;
+      --card:#14111a;
+      --muted:#cfc9de;
+      --accent:#9161ff;
+      --accent-2:#5a2bd1;
+      --white:#ffffff;
+      --border: rgba(255,255,255,0.04);
+      --header-img-url: url('headers/formato.jpg');
+    }
+
+    *{box-sizing:border-box}
+    html,body{height:100%; margin:0; font-family:Inter, system-ui; background:var(--bg); color:var(--white);}
+    .wrap{display:flex; min-height:100vh}
+
+    .sidebar{
+      width:260px; background:linear-gradient(180deg,var(--panel), #0b0810); border-right:1px solid var(--border);
+      padding:28px; position:fixed; top:0; left:0; bottom:0; overflow:auto;
+    }
+
+    .brand{display:flex; gap:12px; align-items:center; margin-bottom:18px}
+    .logo{width:52px;height:52px;border-radius:10px;background:linear-gradient(135deg,var(--accent),var(--accent-2));display:grid;place-items:center;font-weight:800;}
+    .brand h1{font-size:16px;margin:0}
+    .brand p{margin:0;font-size:12px;color:var(--muted)}
+
+    nav.primary{margin-top:6px}
+    nav.primary a{
+      display:flex;gap:10px;align-items:center;padding:10px 8px;border-radius:8px;
+      color:var(--muted);text-decoration:none;font-weight:600;margin-bottom:6px
+    }
+    nav.primary a svg{flex-shrink:0}
+    nav.primary a:hover{color:var(--white)}
+
+    .sidebar .actions{margin-top:24px;display:flex;flex-direction:column;gap:10px}
+    .btn{display:inline-flex;align-items:center;gap:10px;padding:10px 14px;border-radius:10px;text-decoration:none;font-weight:700}
+    .btn.mail{background:linear-gradient(90deg,var(--accent),var(--accent-2));color:var(--white)}
+    .btn.ghost{background:transparent;border:1px solid var(--border);color:var(--muted)}
+
+    .mobile-toggle{display:none;margin-left:auto}
+
+    main{margin-left:260px;flex:1}
+    .header{
+      height:320px; display:flex; align-items:flex-end; color:var(--white);
+      background-image: var(--header-img-url);
+      background-size:cover; background-position:center; position:relative; border-bottom:1px solid var(--border);
+    }
+    .header::after{content:'';position:absolute;inset:0;background:linear-gradient(180deg, rgba(9,6,12,0.25), rgba(10,6,15,0.75));}
+    .header .hero{position:relative; z-index:2;padding:36px 60px;display:flex;align-items:center;gap:24px}
+
+    .hero .title{font-size:28px;margin:0;color:var(--accent)}
+    .hero .subtitle{color:var(--muted);margin-top:6px}
+
+    .container{padding:36px 60px}
+    .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
+    .card{background:linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.005));padding:18px;border-radius:12px;border:1px solid var(--border)}
+    .card p{color:var(--muted)}
+
+    footer{padding:24px 60px;border-top:1px solid var(--border);color:var(--muted)}
+
+    @media (max-width:980px){
+      .sidebar{position:fixed;transform:translateX(-100%);transition:transform .28s;z-index:40}
+      .sidebar.open{transform:translateX(0)}
+      .mobile-toggle{display:inline-flex}
+      main{margin-left:0}
+    }
+  </style>
 </head>
+
 <body>
+<div class="wrap">
 
-  <!-- Sidebar -->
-  <?php include 'sidebar.html'; ?>
+  <!-- SIDEBAR -->
+  <aside class="sidebar">
+    <div class="brand">
+      <div class="logo">DE</div>
+      <div>
+        <h1>Diseño Editorial</h1>
+        <p class="muted">Formato · Tipografía · Retícula</p>
+      </div>
+    </div>
 
-  <main class="content">
-    <h1>Formato</h1>
-    <p>Contenido de la sección Formato.</p>
+    <nav class="primary">
+      <a href="formato.html"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><rect x="3" y="4" width="18" height="16" rx="2" stroke="currentColor" stroke-width="1.4"/></svg> Formato</a>
+      <a href="tipografia.html"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M4 20h16" stroke="currentColor" stroke-width="1.4"/><path d="M12 4l-4 12" stroke="currentColor" stroke-width="1.4"/><path d="M12 4l4 12" stroke="currentColor" stroke-width="1.4"/></svg> Tipografía</a>
+      <a href="reticula.html"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 9h18M3 15h18" stroke="currentColor" stroke-width="1.4"/></svg> Retícula</a>
+      <a href="color.html"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><circle cx="12" cy="12" r="7" stroke="currentColor" stroke-width="1.4"/></svg> Color</a>
+      <a href="cubierta.html"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><rect x="3" y="4" width="14" height="16" rx="1.2" stroke="currentColor" stroke-width="1.4"/><path d="M17 6h3v12h-3" stroke="currentColor" stroke-width="1.4"/></svg> Cubierta / Portada</a>
+      <a href="imagenes.html"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><rect x="3" y="4" width="18" height="14" rx="1.2" stroke="currentColor" stroke-width="1.4"/><path d="M8 11l2 2 3-3 4 4" stroke="currentColor" stroke-width="1.4"/></svg> Uso de imágenes</a>
+      <a href="proceso.html"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M12 2v6" stroke="currentColor" stroke-width="1.4"/><path d="M12 16v6" stroke="currentColor" stroke-width="1.4"/><path d="M4.9 7.5l4.24 4.24" stroke="currentColor" stroke-width="1.4"/><path d="M19.1 16.5l-4.24-4.24" stroke="currentColor" stroke-width="1.4"/></svg> Proceso de maquetación</a>
+    </nav>
+
+    <div class="actions">
+      <a class="btn mail" href="mailto:jose.davila@institutoalejandria.edu.mx">✉️ Enviar correo</a>
+      <a class="btn ghost" href="#">⤴ Volver al inicio</a>
+    </div>
+  </aside>
+
+  <!-- MAIN -->
+  <main>
+    <header class="header">
+      <div class="hero">
+        <h2 class="title">Formato</h2>
+        <p class="subtitle">Dimensiones, márgenes y estructura base</p>
+      </div>
+    </header>
+
+    <div class="container">
+      <h2>¿Qué es el formato?</h2>
+      <p>Contenido base editable...</p>
+    </div>
+
+    <footer>
+      © Diseño Editorial — Formato
+    </footer>
   </main>
 
+</div>
 </body>
 </html>
