--- a/tipografía.html
+++ b/tipografía.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Formato — Diseño Editorial</title>
-  <meta name="description" content="Guía sobre formato en diseño editorial: tamaños de página, márgenes, orientación, proporciones." />
+  <title>Tipografía — Diseño Editorial</title>
+  <meta name="description" content="Guía sobre tipografía en diseño editorial" />
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
@@ -18,7 +18,7 @@
       --accent-2:#5a2bd1;
       --white:#ffffff;
       --border: rgba(255,255,255,0.04);
-      --header-img-url: url('PLACEHOLDER-FORMATO.jpg');
+      --header-img-url: url('PLACEHOLDER-TIPOGRAFIA.jpg');
     }
 
     *{box-sizing:border-box}
@@ -52,7 +52,6 @@
     .mobile-toggle{display:none;margin-left:auto}
 
     main{margin-left:260px;flex:1}
-
     .header{
       height:320px; display:flex; align-items:flex-end; color:var(--white);
       background-image: var(--header-img-url);
@@ -92,17 +91,17 @@
         <h1>Diseño Editorial</h1>
         <p class="muted">Formato · Tipografía · Retícula</p>
       </div>
-      <button class="mobile-toggle" aria-label="Abrir menú" style="margin-left:auto;background:transparent;border:none;color:var(--muted);font-weight:700">☰</button>
+      <button class="mobile-toggle" id="openSidebar" aria-label="Abrir menú" style="margin-left:auto;background:transparent;border:none;color:var(--muted);font-weight:700">☰</button>
     </div>
 
-    <nav class="primary">
+    <nav class="primary" id="primaryNav">
 
-      <a href="formato.html" class="navlink" aria-current="page">
+      <a href="formato.html" class="navlink">
         <svg width="18" height="18" fill="none" viewBox="0 0 24 24"><rect x="3" y="4" width="18" height="16" rx="2" stroke="currentColor" stroke-width="1.4"/></svg>
         Formato
       </a>
 
-      <a href="tipografia.html" class="navlink">
+      <a href="tipografia.html" class="navlink" aria-current="page">
         <svg width="18" height="18" fill="none" viewBox="0 0 24 24"><path d="M4 20h16" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/><path d="M12 4l-4 12" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/><path d="M12 4l4 12" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/></svg>
         Tipografía
       </a>
@@ -141,33 +140,41 @@
 
   <!-- MAIN -->
   <main>
-
     <header class="header">
       <div class="hero">
         <div>
-          <h2 class="title">Formato</h2>
-          <p class="subtitle">Tamaños, márgenes, proporciones y orientación del documento.</p>
+          <h2 class="title">Tipografía</h2>
+          <p class="subtitle">Principios, legibilidad, armonía tipográfica y selección de familias.</p>
         </div>
       </div>
     </header>
 
     <section class="container">
-      <h2>Conceptos básicos del formato editorial</h2>
+      <h2>Introducción a la tipografía</h2>
       <p class="muted">
-        El formato define las dimensiones y proporciones del documento. Afecta la legibilidad, el flujo de lectura y la percepción estética del contenido.
+        La tipografía es la base comunicativa del diseño editorial. La elección de familias, pesos, espaciados y jerarquías afecta directamente la experiencia del lector.
       </p>
 
       <div class="grid">
         <div class="card">
-          <h3>Tamaños estándar</h3>
-          <p>Formatos como carta, A4, A5, y tamaños comerciales para libros y revistas.</p>
+          <h3>Legibilidad</h3>
+          <p>Cómo facilitar la lectura mediante proporciones, contraste y estilo.</p>
         </div>
-
         <div class="card">
-          <h3>Márgenes y caja tipográfica</h3>
-          <p>Relación entre el área útil y el espacio negativo en la página.</p>
+          <h3>Jerarquía tipográfica</h3>
+          <p>Organización visual basada en títulos, subtítulos, cuerpos y estilos.</p>
         </div>
-
         <div class="card">
-          <h3>Proporciones</h3>
-          <p>Aplicación de sistemas como la proporción áurea o series modulares A, B y C.<
+          <h3>Familias tipográficas</h3>
+          <p>Diferencias entre serif, sans-serif, display y monoespaciadas.</p>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      © 2025 — Diseño Editorial
+    </footer>
+  </main>
+</div>
+</body>
+</html>
